# OV-Project

./: .gitignore  README.md  brouillon.py  calculateur.py  catdog.ipynb  cohere_fct.py  config.toml  experimenting.ipynb  kiwi.txt  load_mistral.py  main.py  main2.py  main3.py  mistral.ipynb  mixtral.ipynb  mixtral.py  mixtralexecute.py  other_code.py  pdf_to_vectorstore.py  pyproject.toml
.streamlit/: config.toml
Compromis_de_vente/: calculateur.py  document_loader.py  interface.py  main.py  mixtral_chain.py  mixtral_loader.py  📋_synthesizer.py
Compromis_de_vente/.streamlit/: config.toml
Compromis_de_vente/pages/: page2.py  📟_simulator.py
chatcohere/: Untitled.ipynb
pages/: page2.py
pdf_test/: pdfreader.ipynb
