[tool.poetry]
name = "OV-Project"
version = "0.1.0"
description = ""
authors = ["JB & Clément & Hugo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^3.0.0"
langchain = "^0.2.2"
cohere = "^5.5.4"
streamlit = "^1.35.0"
pypdf2 = "^3.0.1"
langchain-community = "^0.2.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
