[tool.poetry]
name = "OV-Project"
version = "0.1.0"
description = ""
authors = ["JB & Clément & Hugo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^3.0.0"
langchain = "^0.2.2"
cohere = "^5.5.4"
streamlit = "^1.35.0"
pypdf2 = "^3.0.1"
langchain-community = "^0.2.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
langchain-cli = "^0.0.24"
chromadb = "^0.5.0"
openai = "^1.31.1"
tiktoken = "^0.7.0"
sentencepiece = "^0.2.0"
chroma = "^0.2.0"
langchain-openai = "^0.1.8"
langchain-cohere = "^0.1.5"
langchainhub = "^0.1.17"
bs4 = "^0.0.2"
pydantic = "^2.7.3"
streamlit-option-menu = "^0.3.13"
streamlit-extras = "^0.4.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
