[tool.poetry]
name = "OV-Project"
version = "0.1.0"
description = ""
authors = ["JB & Clément & Hugo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^3.0.0"
langchain = "^0.2.2"
streamlit = "^1.35.0"
pypdf2 = "^3.0.1"
langchain-community = "^0.2.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
langchain-cli = "^0.0.24"
chromadb = "^0.5.0"
openai = "^1.31.1"
tiktoken = "^0.7.0"
sentencepiece = "^0.2.0"
chroma = "0.2.0"
langchain-openai = "^0.1.8"
langchain-cohere = "^0.1.5"
langchainhub = "^0.1.17"
bs4 = "0.0.2"
pydantic = "^2.7.3"
streamlit-option-menu = "^0.3.13"
streamlit-extras = "^0.4.3"
langchain-huggingface = "^0.0.3"
mistralai = "^0.4.0"
pypdf = "^4.2.0"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
altair = "5.3.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
asgiref = "3.8.1"
asttokens = "2.4.1"
attrs = "23.2.0"
backoff = "2.2.1"
bcrypt = "4.1.3"
beautifulsoup4 = "4.12.3"
black = "24.4.2"
blinker = "1.8.2"
boto3 = "1.34.120"
botocore = "1.34.120"
build = "1.2.1"
cachetools = "5.3.3"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
opencv-python = "^4.10.0.84"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"
pillow = "^10.3.0"
pymupdf = "^1.24.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
